Base for 2nd and 3rd section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <header>
-        <nav class = "main_width">
-    	<h1><a href = "#">Sit <span class = "color_word">on</span> chair</a></h1>
-    		<ul class = "nav_bar">
+        <nav class = "mainWidth">
+    	<h1><a href = "#">Sit <span class = "colorWord">on</span> chair</a></h1>
+    		<ul class = "navBar">
     			<li><a href ="#">O firmie</a></li>
     			<li><a href ="#">Galeria</a></li>
     			<li><a href ="#">Kontakt</a></li>
@@ -18,7 +18,7 @@
     </header>
 
     <section class = "slider">
-        <article class = "main_width">
+        <article class = "mainWidth">
         	<div id = "box1">
         		<p class = "arrow">&lt;</p>
         	</div>
@@ -26,9 +26,9 @@
         		<img src = "./images/black_chair.png">
         	</div>
         	<div id = "box3">
-        		<h2>Sit <span class = "color_word">on</span> our <span class = "color_word">chair</span></h2>
-        		<p class = "slider_text">Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut milestie a, ultricies porta urna.</p>
-        		<p class = "button_slider"><a href = "#">Zobacz więcej</a></p>
+        		<h2>Sit <span class = "colorWord">on</span> our <span class = "colorWord">chair</span></h2>
+        		<p class = "sliderText">Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut milestie a, ultricies porta urna.</p>
+        		<p class = "buttonSlider"><a href = "#">Zobacz więcej</a></p>
         	</div>
         	<div id = "box4">
         		<p class = "arrow">&gt;</p>
@@ -37,7 +37,68 @@
     </section>
 
     <section class = "chairs">
-        <article class = "main_width">
+        <article class = "mainWidth">
+            <div>
+                <img src = "./images/box1_img.jpg">
+            </div>
+            <div>
+                <img src = "./images/box2_img.jpg">
+            </div>
+            <div id ="whiteBox">
+            </div>
+    </section>
+
+    <section class = "prices">
+        <article class = "mainWidth">
+            <h3>Cennik</h3>
+            <div class = "pricePlans">
+                <div class = "outerCircle">
+                    <div class = "innerCircle"></div>
+                </div>
+                <div class = "basicPlan">
+                    <h4>Basic plan</h4>
+                    <p class="circle">85</span><span class = "upperPrice">99</span></p>
+                    <ul>
+                        <li>Zakup towaaru + dowóz</li>
+                        <li>Serwis</li>
+                    </ul>
+                    <p class = "pricesButton">Dołącz</p>
+                </div>
+            </div>
+
+            <div class = "pricePlans">
+                <div class = "outerCircle">
+                    <div class = "innerCircle"></div>
+                </div>
+                <div class = "standardPlan">
+                    <h4>Standard plan</h4>
+                    <p class="circle">95</span><span class = "upperPrice">99</span></p>
+                    <ul>
+                        <li>Zakup towaaru + dowóz</li>
+                        <li>Serwis</li>
+                        <li>Gwarancja 5 lat</li>
+                    </ul>
+                    <p class = "pricesButton">Dołącz</p>
+                </div>
+            </div>
+
+            <div class = "pricePlans">
+                <div class = "outerCircle">
+                    <div class = "innerCircle"></div>
+                </div>
+                <div class = "advancePlan">
+                    <h4>Advance plan</h4>
+                    <p class="circle">211<span class = "upperPrice">00</span></p>
+                    <ul>
+                        <li>Zakup towaaru + dowóz</li>
+                        <li>Serwis</li>
+                        <li>Gwarancja 6 lat</li>
+                        <li>Porady projektanta</li>
+                    </ul>
+                    <p class = "pricesButton">Dołącz</p>
+                </div>
+            </div>
+        </article>
     </section>
 </body>
 </html>
